Update styles.css to improve card section to prevent box overflowing card when sizing down.

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ h2 {
 
 .card {
     height: 200px;
-    width: 25%;
+    width: 20%;
     color: #3882F6;
     display: flex;
     flex-direction: column;
@@ -134,7 +134,7 @@ h2 {
 }
 
 .box {
-    width: 200px;
+    width: 100%;
     height: 200px;
     border: 2px solid #3882F6;
     border-radius: 7px;
